make a circle appear\!

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
 </head>
 <body>
-<script src="js/d3.v3.min.js" >
-</script>
+<div id="game"></div>
+<script src="js/d3.v3.min.js" ></script>
+<script src="js/main.js"></script>
 
 
 
