animate the circles

--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel = "stylesheet" href = "css/main.css" />
 </head>
 <body>
-<div id="game"></div>
-<script src="js/d3.v3.min.js" ></script>
-<script src="js/main.js"></script>
-
-
-
-
-
-
+  <div id="game"></div>
+  <script src="js/d3.v3.min.js" ></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
