circle game with setup position

--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
   <link rel = "stylesheet" href = "css/main.css" />
 </head>
 <body>
-  <div id="game"></div>
+  <div>
+  <button id="score">Score</button>
+  <button id="start">Start</button>
+  </div>
+  <div id="game">
+    <div id="gameover">Gameover!!</div>
+  </div>
   <script src="js/d3.v3.min.js" ></script>
   <script src="js/main.js"></script>
 </body>
